# autoboxer

./: .gitignore  AGENTS.md  README.md  pyproject.toml  start.sh
.pi/sessions/29e7aae5-d3c1-4226-918c-21f46b54b14d/: implementation_plan.md  task.md  walkthrough.md
.pi/sessions/7099d6b1-3fdf-4f9c-a9e8-c55f8eebb3f9/: implementation_plan.md  task.md  walkthrough.md
.pi/sessions/a900dfc1-94ca-4ab4-8995-30edc892e695/: implementation_plan.md  task.md  walkthrough.md
app/: config.py  database.py  db_models.py  main.py  models.py  pipeline.py  utils.py
backend/: main.py  pyproject.toml
backend/app/: config.py  database.py  db_models.py  main.py  models.py  pipeline.py  utils.py
backend/app/routers/: annotations.py  classes.py  export.py  images.py  labeling.py  pipeline.py  projects.py
backend/tests/: conftest.py  test_export.py  test_labeling.py  test_projects.py
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/e2e/: autoboxer.spec.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BatchModal.tsx  ColorPicker.tsx  ConfirmModal.tsx  CreateProjectModal.tsx  Dashboard.tsx  Editor.tsx  Header.tsx  ProjectGallery.tsx
frontend/src/components/__tests__/: BatchModal.test.tsx  ConfirmModal.test.tsx  (+3 more)
frontend/src/context/: AppContext.tsx
frontend/src/hooks/: useEditor.ts  useProjects.ts
frontend/src/layouts/: AppLayout.tsx
frontend/src/pages/: DashboardPage.tsx  EditorPage.tsx  ProjectGalleryPage.tsx
frontend/src/types/: index.ts
(+1 files in other folders)
