[project]
name = "autoboxer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "huggingface-hub>=1.17.0",
    "mlx-vlm>=0.5.0",
    "pillow>=12.2.0",
    "python-multipart>=0.0.30",
    "sqlalchemy>=2.0.50",
    "uvicorn>=0.48.0",
]

[tool.uv.sources]
mlx-vlm = { git = "https://github.com/beshkenadze/mlx-vlm", rev = "feat/locateanything-3b" }

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.3.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A", "C4", "SIM", "ARG"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
